@@ -11,11 +11,15 @@ import java.io.*;
 import java.net.ConnectException;
 import java.net.Socket;
 import java.net.SocketException;
+import java.util.List;
 
 public class RemoteDesktopClient extends JFrame {
     private Socket socket;
     private DataInputStream dis;
     private DataOutputStream dos;
+    private Socket fileSocket;
+    private DataOutputStream fileDos;
+    private DataInputStream fileDis;
     private JFrame frame;
     private JLabel label;
     private BufferedImage currentImage;
@@ -26,8 +30,11 @@ public class RemoteDesktopClient extends JFrame {
     private final JButton disconnectButton;
     private final JButton remoteButton;
     private final  String name = System.getenv("COMPUTERNAME");
-    private final JTextField chatInput;
-    private JTextArea chatArea;
+    private final JTextField chatInput ;
+    private final JTextArea chatArea;
+    private Socket chatSocket;
+    private static DataOutputStream chatDos;
+    private DataInputStream chatDis;
 
     public static void main(String[] args) {
         new RemoteDesktopClient().setVisible(true);
@@ -86,6 +93,8 @@ public class RemoteDesktopClient extends JFrame {
         sendChatButton.addActionListener(e -> {
             try {
                 sendChatMessage();
+            } catch (SocketException ex) {
+                System.out.println("Server Chat đã đóng kết nối");
             } catch (IOException ex) {
                 throw new RuntimeException(ex);
             }
@@ -94,8 +103,7 @@ public class RemoteDesktopClient extends JFrame {
         inputPanel.add(sendChatButton, BorderLayout.EAST);
 
         JPanel buttonPanel = new JPanel(new FlowLayout());
-        JButton sendFileButton = new JButton("Send File");
-        sendFileButton.addActionListener(e -> sendFile());
+        JButton sendFileButton = getjButton();
         JButton videoCallButton = new JButton("Video Call");
         videoCallButton.addActionListener(e -> startVideoCall());
         JButton callButton = new JButton("Call");
@@ -119,6 +127,23 @@ public class RemoteDesktopClient extends JFrame {
         setButtonSize(connectButton, disconnectButton, remoteButton, sendFileButton, videoCallButton, callButton,  sendChatButton);
 
     }
+
+    private @NotNull JButton getjButton() {
+        JButton sendFileButton = new JButton("Send File");
+        sendFileButton.addActionListener(e -> {
+            try {
+                if (!checkFileConnection()) {
+                    connectToFileServer();
+                }
+                sendFile();
+            } catch (IOException ex) {
+                ex.printStackTrace();
+                JOptionPane.showMessageDialog(this, "Lỗi khi kết nối tới server truyền file: " + ex.getMessage(), "Lỗi kết nối", JOptionPane.ERROR_MESSAGE);
+            }
+        });
+        return sendFileButton;
+    }
+
     private void setButtonSize(JButton... buttons) {
 
         Dimension buttonSize = new Dimension(130, 20);
@@ -152,6 +177,8 @@ public class RemoteDesktopClient extends JFrame {
             protected Void doInBackground() throws Exception {
                 try {
                     connectToServer();
+                    connectToChatServer();
+                    connectToFileServer();
                 } catch (ConnectException e1) {
                     JOptionPane.showMessageDialog(null, "Không thể kết nối tới server: " + e1.getMessage(), "Lỗi kết nối", JOptionPane.ERROR_MESSAGE);
                     connectButton.setText("Connect");
@@ -170,7 +197,7 @@ public class RemoteDesktopClient extends JFrame {
                 if (checkConnection()) {
                     connectButton.setText("Connected");
                     disconnectButton.setEnabled(true);
-                    //startReceivingMessages();
+                    startReceivingMessages();
                 } else {
                     connectButton.setText("Connect");
                     connectButton.setEnabled(true);
@@ -179,11 +206,25 @@ public class RemoteDesktopClient extends JFrame {
             }
         }.execute();
     }
+    private void connectToFileServer() throws IOException {
+        String ip = Ip4Address.getText();
+        try {
+            fileSocket = new Socket(ip, 49152);
+            fileDos = new DataOutputStream(new BufferedOutputStream(fileSocket.getOutputStream()));
+            fileDis = new DataInputStream(new BufferedInputStream(fileSocket.getInputStream()));
+            System.out.println("Đã kết nối tới server truyền file");
+            receiveFile();
+        } catch (ConnectException e) {
+            throw new ConnectException("Không thể kết nối tới server truyền file tại " + ip + ": " + e.getMessage());
+        } catch (IOException e) {
+            throw new IOException("Lỗi khi kết nối tới server truyền file: " + e.getMessage());
+        }
+    }
 
     private void connectToServer() throws IOException {
         String ip = Ip4Address.getText();
         try {
-            socket = new Socket(ip, 12345);
+            socket = new Socket(ip, 49150);
             dos = new DataOutputStream(new BufferedOutputStream(socket.getOutputStream()));
             dis = new DataInputStream(new BufferedInputStream(socket.getInputStream()));
             System.out.println("Đã kết nối tới server");
@@ -213,6 +254,7 @@ public class RemoteDesktopClient extends JFrame {
                 if (checkConnection()) {
                     try {
                         startRemoteAfterConnection();
+                        sendChatMessage();
                     } catch (IOException e) {
                         e.printStackTrace();
                     }
@@ -243,16 +285,27 @@ public class RemoteDesktopClient extends JFrame {
     private boolean checkConnection() {
         return socket != null && !socket.isClosed() && socket.isConnected() && !socket.isInputShutdown() && !socket.isOutputShutdown() && dis != null && dos != null ;
     }
+    private boolean checkFileConnection() {
+        return fileSocket != null && !fileSocket.isClosed() && fileSocket.isConnected() && !fileSocket.isInputShutdown() && !fileSocket.isOutputShutdown() && fileDis != null && fileDos != null;
+    }
+
 
     private void closeConnections() {
         try {
             if (dis != null) dis.close();
             if (dos != null) dos.close();
             if (socket != null) socket.close();
+            if (chatDis != null) chatDis.close();
+            if (chatDos != null) chatDos.close();
+            if (chatSocket != null) chatSocket.close();
+            if (fileDis != null) fileDis.close();
+            if (fileDos != null) fileDos.close();
+            if (fileSocket != null) fileSocket.close();
         } catch (IOException ex) {
             ex.printStackTrace();
         }
     }
+
 
     private void startRemote() throws IOException {
         if (!checkConnection()) {
@@ -262,6 +315,7 @@ public class RemoteDesktopClient extends JFrame {
             startRemoteAfterConnection();
         }
     }
+
 
     private void startRemoteAfterConnection() throws IOException {
         remoteData();
@@ -306,8 +360,8 @@ public class RemoteDesktopClient extends JFrame {
             }
 
             @Override
-            protected void process(java.util.List<BufferedImage> chunks) {
-                currentImage = chunks.get(chunks.size() - 1);
+            protected void process(List<BufferedImage> chunks) {
+                currentImage = chunks.getLast();
                 updateImage();
             }
 
@@ -345,94 +399,65 @@ public class RemoteDesktopClient extends JFrame {
     private void startVideoCall() {
         // Chức năng gọi video chưa được triển khai
     }
-
+    //FILE_TRANSFER
     private void sendFile() {
-        if (!checkConnection()) {
-            JOptionPane.showMessageDialog(this, "Chưa kết nối tới server", "Lỗi", JOptionPane.ERROR_MESSAGE);
-            return;
-        }
 
         JFileChooser fileChooser = new JFileChooser();
         int returnValue = fileChooser.showOpenDialog(this);
         if (returnValue == JFileChooser.APPROVE_OPTION) {
-            File selectedFile = fileChooser.getSelectedFile();
-            try {
-                dos.writeUTF("FILE");
-                dos.writeUTF(selectedFile.getName());
-                dos.writeLong(selectedFile.length());
+            File file = fileChooser.getSelectedFile();
+            try (FileInputStream fis = new FileInputStream(file)) {
+                fileDos.writeUTF("FILE_SEND");
+                fileDos.writeUTF(file.getName());
+                fileDos.writeLong(file.length());
 
-                FileInputStream fis = new FileInputStream(selectedFile);
                 byte[] buffer = new byte[4096];
                 int bytesRead;
                 while ((bytesRead = fis.read(buffer)) != -1) {
-                    dos.write(buffer, 0, bytesRead);
+                    fileDos.write(buffer, 0, bytesRead);
                 }
-                dos.flush();
-                fis.close();
-                JOptionPane.showMessageDialog(this, "File đã được gửi thành công", "Thành công", JOptionPane.INFORMATION_MESSAGE);
+                fileDos.flush();
+                JOptionPane.showMessageDialog(this, "File đã được gửi thành công.");
             } catch (IOException e) {
                 e.printStackTrace();
                 JOptionPane.showMessageDialog(this, "Lỗi khi gửi file: " + e.getMessage(), "Lỗi", JOptionPane.ERROR_MESSAGE);
             }
         }
     }
-
-    private void sendChatMessage() throws IOException {
-        if (!checkConnection()) {
-            JOptionPane.showMessageDialog(this, "Chưa kết nối tới server", "Lỗi", JOptionPane.ERROR_MESSAGE);
-            return;
-        }
-        dos.writeUTF("CHAT");
-        dos.flush();
-        String message = chatInput.getText().trim();
-        if (!message.isEmpty()) {
-            try {
-                dos.writeUTF(name + ": " + message);
-                chatInput.setText("");
-                dos.flush();
-            } catch (IOException e) {
-                e.printStackTrace();
-                JOptionPane.showMessageDialog(this, "Lỗi khi gửi tin nhắn: " + e.getMessage(), "Lỗi", JOptionPane.ERROR_MESSAGE);
-            }
-        }
-    }
-    /*
-    private void startReceivingMessages() {
-        new SwingWorker<Void, String>() {
+    private void receiveFile() {
+        new SwingWorker<Void, Void>() {
             @Override
             protected Void doInBackground() throws Exception {
-                while (!isCancelled() && checkConnection()) {
-                    try {
-                        String message = dis.readUTF();
-                        publish(message);
-                    } catch (IOException e) {
-                        e.printStackTrace();
-                        break;
+                try {
+                    while (!isCancelled()) {
+                        String messageType = fileDis.readUTF();
+                        if ("FILE_SEND".equals(messageType)) {
+                            String fileName = fileDis.readUTF();
+                            long fileSize = fileDis.readLong();
+                            File file = new File("received_" + fileName);
+                            try (FileOutputStream fos = new FileOutputStream(file)) {
+                                byte[] buffer = new byte[4096];
+                                int bytesRead;
+                                long totalBytesRead = 0;
+                                while (totalBytesRead < fileSize && (bytesRead = fileDis.read(buffer, 0, (int) Math.min(buffer.length, fileSize - totalBytesRead))) != -1) {
+                                    fos.write(buffer, 0, bytesRead);
+                                    totalBytesRead += bytesRead;
+                                }
+                            }
+                            JOptionPane.showMessageDialog(null, "File " + fileName + " đã được nhận thành công.", "Thông báo", JOptionPane.INFORMATION_MESSAGE);
+                        }
                     }
+                } catch (SocketException e) {
+                    System.out.println("Server đã đóng kết nối");
+                } catch (IOException e) {
+                    e.printStackTrace();
                 }
                 return null;
-            }
-
-            @Override
-            protected void process(java.util.List<String> chunks) {
-                for (String message : chunks) {
-                    appendToChatArea(message);
-                }
-            }
-
-            @Override
-            protected void done() {
-                closeConnections();
             }
         }.execute();
     }
 
-    private void appendToChatArea(String message) {
-        SwingUtilities.invokeLater(() -> {
-            chatArea.append(message + "\n");
-            chatArea.setCaretPosition(chatArea.getDocument().getLength());
-        });
-    }*/
+
 
     private Point adjustMouseCoordinates(Point clientPoint) {
         Dimension frameSize = frame.getContentPane().getSize();
@@ -522,5 +547,67 @@ public class RemoteDesktopClient extends JFrame {
         };
 
         frame.addKeyListener(keyAdapter);
+    }
+    //
+    private void connectToChatServer() throws IOException {
+        String ip = Ip4Address.getText();
+        try {
+            chatSocket = new Socket(ip, 49151);
+            chatDos = new DataOutputStream(new BufferedOutputStream(chatSocket.getOutputStream()));
+            chatDis = new DataInputStream(new BufferedInputStream(chatSocket.getInputStream()));
+            System.out.println("Đã kết nối tới server chat");
+        } catch (ConnectException e) {
+            throw new ConnectException("Không thể kết nối tới server chat tại " + ip + ": " + e.getMessage());
+        } catch (IOException e) {
+            throw new IOException("Lỗi khi kết nối tới server chat: " + e.getMessage());
+        }
+    }
+
+    private void sendChatMessage() throws IOException {
+        String message = chatInput.getText().trim();
+        if (!message.isEmpty() && chatDos != null) {
+            chatDos.writeUTF(name + ": " + message);
+            chatDos.flush();
+            chatInput.setText("");
+        }
+    }
+    private void startReceivingMessages() {
+        new SwingWorker<Void, String>() {
+            @Override
+            protected Void doInBackground() throws Exception {
+                while (!isCancelled() && checkConnection()) {
+                    try {
+                        String message = chatDis.readUTF();
+                        publish(message);
+                    } catch (SocketException e) {
+                        System.out.println("Server đã đóng kết nối");
+                        break;
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                        break;
+                    }
+                }
+                return null;
+            }
+
+            @Override
+            protected void process(List<String> chunks) {
+                for (String message : chunks) {
+                    appendToChatArea(message);
+                }
+            }
+
+            @Override
+            protected void done() {
+                closeConnections();
+            }
+        }.execute();
+    }
+
+    private void appendToChatArea(String message) {
+        SwingUtilities.invokeLater(() -> {
+            chatArea.append(message + "\n");
+            chatArea.setCaretPosition(chatArea.getDocument().getLength());
+        });
     }
 }
